--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title">{{title}}</span>
-          <p>Posted by {{User.username}} on {{created_on}}.</p>
+          <p>Posted by {{username}} on {{created_on}}.</p>
           <p>{{text}}</p>
         </div>
         <div class="card-action">
