working on comment routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,6 +37,7 @@
   <script src="/js/logoutLogic.js"></script>
   <script src="/js/PostFront.js"></script>
   <script src="/js/singlePost.js"></script>
+  <script src="/js/commentFront.js"></script>
   
 </body>
 
