--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,6 +4,23 @@
     <div class="col s12 m6">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
+          <a href="/homepageSingle/{{encodeURIComponent id}}"><span class="card-title">{{title}}</span>
+          <p>Posted by {{username}} on {{created_on}}.</p>
+          <p>{{text}}</p>
+        </div>
+        <div class="card-action">
+        </div>
+      </div>
+    </div>
+  </div>
+  {{/each}}
+  
+ {{#if comments.length}} 
+ {{#each comments}}
+ <div class="row">
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
           <span class="card-title">{{title}}</span>
           <p>Posted by {{username}} on {{created_on}}.</p>
           <p>{{text}}</p>
@@ -14,3 +31,4 @@
     </div>
   </div>
   {{/each}}
+  {{/if}}
