--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -5,22 +5,14 @@
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title">{{username}}</span>
-          {{#if editing}}
-          <div id="editableTitle" contenteditable="true">{{title}}</div>
-          <div id="editableText" contenteditable="true">{{text}}</div>
-          {{else}}
-          <p class="post-link" data-note="{{title}}">{{title}}</p>
+          <p class="homePost-link" data-note="{{title}}">{{title}}</p>
           <p>{{text}}</p>
-          {{/if}}
-        </div>
+          </div>
         <div class="card-action">
-          {{#if editing}}
-          <button class="waves-effect waves-light btn" id="save-button">Save</button>
-          <button class="waves-effect waves-light btn" id="cancel-button">Cancel</button>
-          {{else}}
-           <button class="waves-effect waves-light btn" id="edit-button">Edit</button>
-           {{/if}}
-        </div>
+         <button class="waves-effect waves-light btn" id="save-button">Save</button>
+         <button class="waves-effect waves-light btn" id="cancel-button">Cancel</button>
+         <button class="waves-effect waves-light btn" id="edit-button">Edit</button>
+            </div>
       </div>
     </div>
   </div>
